# VSidoConn4Rasp2

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  buildenv.sh  index.html  install.sh  params.json
Config/: Makefile  interfaces  nginx.vsido.web.debug  nginx.vsido.web.game  nginx.vsido.web.root  nginx.vsido.web.server  vsido.connect.rc  vsido.ifttt.rc  vsido.streamingface.rc  vsido.streamingmarker.rc  vsido.streamingraw.rc  vsido.streamingsub.rc  vsido.webcam.rc
Overlay/VSidoService/: CMakeLists.txt  VSido.srv.start  btscan  btsetup
Overlay/VSidoWeb/: CMakeLists.txt
Overlay/VSidoWeb/WebServer/: index.html
Overlay/VSidoWeb/WebServer/camera/: index.html
Overlay/VSidoWeb/WebServer/camera/attack/: index.html
Overlay/VSidoWeb/WebServer/camera/debug/: index.html
Overlay/VSidoWeb/WebServer/connection/: index.html
Overlay/VSidoWeb/WebServer/js/: vsido.camera.js
Overlay/VSidoWeb/WebServer/sample/: robot.html
Overlay/VSidoWeb/debug/: index.html
Overlay/VSidoWeb/debug/camera/: index.html
Overlay/VSidoWeb/debug/camera/attack/: index.html
Overlay/VSidoWeb/debug/camera/debug/: index.html
Overlay/VSidoWeb/debug/serial/: index.html
Quickstart/: index.html
Quickstart/assets/css/: main.css
RobotGame/: CMakeLists.txt
RobotGame/WebServerGame/: WebServer.js  index.html
RobotGame/WebServerGame/OHDSample/: ServoAngle.html  SingleCamera.html  index.html
RobotGame/WebServerGame/OHDSample/js/: vsido.web.js
RobotGame/WebServerGame/game/: 3d.html  player.html  tv.html
RobotGame/WebServerGame/game/js/: battle.camera.js  battle.r2r.js  vsido.camera.js  vsido.client.api.js
RobotGame/WebServerGame/game/libs/: common.css
RobotGame/WebServerGame/game/libs/jquerymobile/1.4.3/: jquery.mobile.min.map
RobotGame/WebServerGame/ip2/: camera.html  camera_d.html  camera_main.html  camera_sub.html  command.html  ik.html  index.html  movement.html  target.html
RobotGame/WebServerGame/ip2/js/: vsido.r2r.js
RobotGame/WebServerGame/libs/: common.css  common.js
Setup/: setenv.sh
VideoStreaming/: CMakeLists.txt
VideoStreaming/MjpgServer/: CMakeLists.txt  MJPEStream.face.js  MJPEStream.face.rc  MJPEStream.face.sh  MJPEStream.marker.js  MJPEStream.marker.rc  MJPEStream.marker.sh  MJPEStream.raw.js  MJPEStream.raw.rc  MJPEStream.raw.sh  MJPEStream.sub.js  MJPEStream.sub.sh
VideoStreaming/WebCameraApp/: CMakeLists.txt  Makefile  VSido.cam  VSido.cam.start  VSido.srv.start  capture.cpp  capture.hpp  debug.h  facedetect.cpp  facedetect.hpp  frameloop.cpp  frameloop.hpp  main.cpp  markerdetect.cpp  markerdetect.hpp  tcpcomm.cpp  tcpcomm.hpp  wscomm.cpp  wscomm.hpp
WebRoot/: CMakeLists.txt  webserver.root.sh
WebRoot/WebRoot/: WebServer.js  index.html
ifttt/: .dropbox_uploader  CMakeLists.txt  collectlog.sh  ifttt.rc
prebuild/websockets/: libwebsockets.tar.bz
prebuild/websockets/lib/: libwebsockets.so.4.0.0
prebuild/websockets/lib/cmake/libwebsockets/: LibwebsocketsTargets-noconfig.cmake  LibwebsocketsTargets.cmake
prebuild/websockets/lib/pkgconfig/: libwebsockets.pc
