install(FILES MJPEStream.face.sh PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ DESTINATION bin)
install(FILES MJPEStream.raw.sh PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ DESTINATION bin)
install(FILES MJPEStream.marker.sh PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ DESTINATION bin)
install(FILES MJPEStream.face.rc PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ DESTINATION bin)
install(FILES MJPEStream.raw.rc PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ DESTINATION bin)
install(FILES MJPEStream.marker.rc PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ DESTINATION bin)
install(FILES MJPEStream.face.js DESTINATION share)
install(FILES MJPEStream.raw.js DESTINATION share)
install(FILES MJPEStream.marker.js DESTINATION share)
install(DIRECTORY node-mjpeg-server DESTINATION share )

